--- a/front-end/src/components/Navbar/Navbar.scss
+++ b/front-end/src/components/Navbar/Navbar.scss
@@ -31,15 +31,14 @@
   } //a
   
   //extra large devices
-  @media screen and (min-width: 2000px) {
-    width: 180px;
-    height: 40px;
-  }
+  // @media screen and (min-width: 2000px) {
+  //   width: 180px;
+  //   height: 40px;
+  // }
 
-  /*
-    extra small devices - mobile
-  */
-  @media screen and (min-width: 200px) {
+  //mobile screen
+  @media screen and (max-width: 200px) {
+    // margin-right:-0.7rem;
     display:none;
   } //media
 } //app__navbar-logo
@@ -214,13 +213,10 @@
         }//div
       } //a
     } //ul
+  }//div
 
-    @media screen and (min-width: 900px) {
-      display: none;
-    }
+  //to hide menu icon when screen is the large device
+  @media screen and (min-width: 900px) {
+    display: none;
   }
-
-  // @media screen and (min-width: 900px) {
-  //   display: none;
-  // }
 } //app__navbar-menu
