--- a/front-end/src/container/Footer/Footer.scss
+++ b/front-end/src/container/Footer/Footer.scss
@@ -26,7 +26,8 @@
     justify-content: center;
 
     //extra small devices - mobile
-    @media screen and (min-width: 200px) {
+    //On screens that are 360px or less
+    @media screen and (max-width: 360px) {
         width: 280px;
     } //media
 }//footer-container
